Fix profile dropdown colors and spacing

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -133,6 +133,7 @@ a:visited {
     /* --bs-dropdown-link-active-color: var(--primary-color); */
     --bs-dropdown-link-active-bg: #fff;
     --bs-dropdown-link-hover-color: var(--primary-color);
+    --bs-dropdown-link-hover-bg: #fff;
 }
 
 .dropdown-menu li:last-child .dropdown-item {
